--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -9,10 +9,17 @@ add_executable(parsingnode
     local_request.cpp
     local_request.h
     request_manager.h
-    request_manager.cpp)
+    request_manager.cpp
+    wallet.h
+    wallet.cpp
+    hex.h
+    hex.cpp)
 target_include_directories(parsingnode PUBLIC ${Boost_INCLUDE_DIR})
 target_link_libraries(parsingnode
     ${Boost_LIBRARIES}
     uriparser
     httplib
-    nlohmann_json)
+    nlohmann_json
+    ${OPENSSL_SSL_LIBRARY}
+    ${OPENSSL_CRYPTO_LIBRARY}
+    base64)
