--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -6,6 +6,12 @@ set(URIPARSER_BUILD_TESTS OFF CACHE BOOL "Turn off URIParser tests" FORCE)
 set(URIPARSER_BUILD_DOCS OFF CACHE BOOL "Turn off URIParser docs" FORCE)
 set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@3" CACHE STRING "OpenSSL Root Dir" FORCE)
 set(OPENSSL_LIBRARIES "/opt/homebrew/opt/openssl@3/lib" CACHE STRING "OpenSSL Lib Dir" FORCE)
+set(SXG_BUILD_SHARED OFF CACHE BOOL "Turn off SXG shared library build" FORCE)
+set(SXG_BUILD_STATIC ON CACHE BOOL "Turn on SXG static library build" FORCE)
+set(RUN_TEST OFF CACHE BOOL "Turn off SXG test builds" FORCE)
+set(SXG_BUILD_EXECUTABLES OFF CACHE BOOL "Turn off SXG executable builds" FORCE)
+set(SXG_BUILD_MAN OFF CACHE BOOL "Turn off SXG man builds" FORCE)
+set(SXG_BUILD_FUZZER OFF CACHE BOOL "Turn off SXG fuzzer builds" FORCE)
 
 find_package(Boost ${BOOST_VER_DOT})
 find_package(OpenSSL REQUIRED)
@@ -14,6 +20,7 @@ add_subdirectory(cpp-httplib)
 add_subdirectory(json)
 add_subdirectory(uriparser)
 add_subdirectory(tidy-html5)
+add_subdirectory(libsxg)
 add_definitions(-DCPPHTTPLIB_OPENSSL_SUPPORT)
 add_library(base64 STATIC "${CMAKE_CURRENT_SOURCE_DIR}/cpp-base64/base64.cpp")
 target_include_directories(base64 PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/cpp-base64")
